--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           <div class="left-section">
             <img src="./images/image-computer.png" alt="" />
           </div>
+          </div>
           <div class="right-section">
             <div class="desc-box">
               <div class="desc">
