--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
           <div class="left-section">
             <img src="./images/image-computer.png" alt="" />
           </div>
-          </div>
           <div class="right-section">
             <div class="desc-box">
               <div class="desc">
@@ -55,15 +54,18 @@
                   Easily search your snippets by content, category, web address,
                   application, and more.
                 </p>
+              </div>
               <div class="desc">
                 <h4>iCloud Sync</h4>
                 <p>
                   Instantly saves and syncs snippets across all your devices.
                 </p>
+              </div>
               <div class="desc">
                 <h4>Complete History</h4>
                 <p>
-                  Retrieve any snippets from the first moment you started using the app.
+                  Retrieve any snippets from the first moment you started using
+                  the app.
                 </p>
               </div>
             </div>
@@ -73,55 +75,68 @@
       <section class="clipboard">
         <div class="second-container">
           <h3>Access Clipboard anywhere</h3>
-          <p>Whether you’re on the go, or at your computer, you can access all your Clipboard 
-            snippets in a few simple clicks.</p>
+          <p>
+            Whether you’re on the go, or at your computer, you can access all
+            your Clipboard snippets in a few simple clicks.
+          </p>
         </div>
-        <div class="devices-img"><img src="./images/image-devices.png" alt=""></div>
+        <div class="devices-img">
+          <img src="./images/image-devices.png" alt="" />
+        </div>
       </section>
       <section class="workflows">
         <h3>Supercharge your workflow</h3>
         <p>We’ve got the tools to boost your productivity.</p>
         <div class="container">
           <div class="workflow">
-            <img src="./images/icon-blacklist.svg" alt="">
+            <img src="./images/icon-blacklist.svg" alt="" />
             <h5>Create blacklists</h5>
-            <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
+            <p>
+              Ensure sensitive information never makes its way to your clipboard
+              by excluding certain sources.
+            </p>
           </div>
           <div class="workflow">
-            <img src="./images/icon-text.svg" alt="">
+            <img src="./images/icon-text.svg" alt="" />
             <h5>Plain text snippets</h5>
-            <p>Remove unwanted formatting from copied text for a consistent look.</p>
+            <p>
+              Remove unwanted formatting from copied text for a consistent look.
+            </p>
           </div>
           <div class="workflow">
-            <img src="./images/icon-preview.svg" alt="">
+            <img src="./images/icon-preview.svg" alt="" />
             <h5>Sneak preview</h5>
-            <p>Quick preview of all snippets on your Clipboard for easy access.</p>
+            <p>
+              Quick preview of all snippets on your Clipboard for easy access.
+            </p>
           </div>
         </div>
       </section>
       <div class="logos-works">
         <div class="logos-work">
-          <img src="./images/logo-google.png" alt="">
+          <img src="./images/logo-google.png" alt="" />
         </div>
         <div class="logos-work">
-          <img src="./images/logo-ibm.png" alt="">
+          <img src="./images/logo-ibm.png" alt="" />
         </div>
         <div class="logos-work">
-          <img src="./images/logo-microsoft.png" alt="">
+          <img src="./images/logo-microsoft.png" alt="" />
         </div>
         <div class="logos-work">
-          <img src="./images/logo-hp.png" alt="">
+          <img src="./images/logo-hp.png" alt="" />
         </div>
         <div class="logos-work">
-          <img src="./images/logo-vector-graphics.png" alt="">
+          <img src="./images/logo-vector-graphics.png" alt="" />
         </div>
       </div>
       <section class="install-desc">
         <div class="second-container">
           <div class="paragraph">
             <h3>Clipboard for iOS and Mac OS</h3>
-            <p>Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
-              and you’re ready to start adding to your clipboard.</p>
+            <p>
+              Available for free on the App Store. Download for Mac or iOS, sync
+              with iCloud and you’re ready to start adding to your clipboard.
+            </p>
           </div>
           <div class="download-btn">
             <a href="" class="btn-download-cyan">Download for iOS</a>
@@ -132,29 +147,35 @@
     </main>
     <footer>
       <div class="container">
-      <div class="logo-footer">
-        <img src="./images/logo.svg" alt="">
-      </div>
-      <div class="menu-footer">
-        <div class="descs-footer">
-          <a href="#">FAQs</a>
-          <a href="#">Contact Us</a>
+        <div class="logo-footer">
+          <img src="./images/logo.svg" alt="" />
         </div>
-        <div class="descs-footer">
-          <a href="#">Privacy Policy</a>
-          <a href="#">Press Kit</a>
+        <div class="menu-footer">
+          <div class="descs-footer">
+            <a href="#">FAQs</a>
+            <a href="#">Contact Us</a>
+          </div>
+          <div class="descs-footer">
+            <a href="#">Privacy Policy</a>
+            <a href="#">Press Kit</a>
+          </div>
+          <div class="descs-footer">
+            <a href="#">Install Guide</a>
+          </div>
         </div>
-        <div class="descs-footer">
-          <a href="#">Install Guide</a>
+
+        <div class="social-medias">
+          <a href="https://twitter.com/gabrielgxrcia"
+            ><img src="./images/icon-facebook.svg" alt=""
+          /></a>
+          <a href="https://twitter.com/gabrielgxrcia"
+            ><img src="./images/icon-twitter.svg" alt=""
+          /></a>
+          <a href="https://instagram.com/gabrielgxrcia"
+            ><img src="./images/icon-instagram.svg" alt=""
+          /></a>
         </div>
       </div>
-    
-      <div class="social-medias">
-        <a href="https://twitter.com/gabrielgxrcia"><img src="./images/icon-facebook.svg" alt=""></a>
-        <a href="https://twitter.com/gabrielgxrcia"><img src="./images/icon-twitter.svg" alt=""></a>
-        <a href="https://instagram.com/gabrielgxrcia"><img src="./images/icon-instagram.svg" alt=""></a>
-      </div>
-    </div>
     </footer>
   </body>
 </html>
